--- a/Pages/Enrollments/Create.cshtml
+++ b/Pages/Enrollments/Create.cshtml
@@ -1,11 +1,11 @@
 ﻿@page
-@model Student_Management_System.Pages.EditModel
+@model Student_Management_System.Pages.Enrollments.CreateModel
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Create";
 }
 
-<h1>Edit</h1>
+<h1>Create</h1>
 
 <h4>Enrollment</h4>
 <hr />
@@ -13,16 +13,13 @@
     <div class="col-md-4">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Enrollment.EnrollmentID" />
             <div class="form-group">
                 <label asp-for="Enrollment.StudentID" class="control-label"></label>
-                <select asp-for="Enrollment.StudentID" class="form-control" asp-items="ViewBag.StudentID"></select>
-                <span asp-validation-for="Enrollment.StudentID" class="text-danger"></span>
+                <select asp-for="Enrollment.StudentID" class ="form-control" asp-items="ViewBag.StudentID"></select>
             </div>
             <div class="form-group">
                 <label asp-for="Enrollment.CourseID" class="control-label"></label>
-                <select asp-for="Enrollment.CourseID" class="form-control" asp-items="ViewBag.CourseID"></select>
-                <span asp-validation-for="Enrollment.CourseID" class="text-danger"></span>
+                <select asp-for="Enrollment.CourseID" class ="form-control" asp-items="ViewBag.CourseID"></select>
             </div>
             <div class="form-group">
                 <label asp-for="Enrollment.Grade" class="control-label"></label>
@@ -30,14 +27,14 @@
                 <span asp-validation-for="Enrollment.Grade" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-page="./Index">Back to List</a>
+    <a asp-page="Index">Back to List</a>
 </div>
 
 @section Scripts {
