--- a/Pages/Enrollments/Delete.cshtml
+++ b/Pages/Enrollments/Delete.cshtml
@@ -1,12 +1,13 @@
 ﻿@page
-@model Student_Management_System.Pages.DetailsModel
+@model Student_Management_System.Pages.Enrollments.DeleteModel
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Delete";
 }
 
-<h1>Details</h1>
+<h1>Delete</h1>
 
+<h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Enrollment</h4>
     <hr />
@@ -30,8 +31,10 @@
             @Html.DisplayFor(model => model.Enrollment.Course.CourseID)
         </dd>
     </dl>
-</div>
-<div>
-    <a asp-page="./Edit" asp-route-id="@Model.Enrollment.EnrollmentID">Edit</a> |
-    <a asp-page="./Index">Back to List</a>
+    
+    <form method="post">
+        <input type="hidden" asp-for="Enrollment.EnrollmentID" />
+        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <a asp-page="./Index">Back to List</a>
+    </form>
 </div>
