--- a/Pages/Enrollments/Index.cshtml
+++ b/Pages/Enrollments/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model Student_Management_System.Pages.IndexModel
+@model Student_Management_System.Pages.Enrollments.IndexModel
 
 @{
     ViewData["Title"] = "Index";
