--- a/Pages/Students/Delete.cshtml
+++ b/Pages/Students/Delete.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model Student_Management_System.Pages.DeleteModel
+@model Student_Management_System.Pages.Students.DeleteModel
 
 @{
     ViewData["Title"] = "Delete";
@@ -9,31 +9,31 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Enrollment</h4>
+    <h4>Student</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Enrollment.Grade)
+            @Html.DisplayNameFor(model => model.Student.FirstName)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Enrollment.Grade)
+            @Html.DisplayFor(model => model.Student.FirstName)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Enrollment.Student)
+            @Html.DisplayNameFor(model => model.Student.LastName)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Enrollment.Student.StudentId)
+            @Html.DisplayFor(model => model.Student.LastName)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Enrollment.Course)
+            @Html.DisplayNameFor(model => model.Student.EnrollmentDate)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Enrollment.Course.CourseID)
+            @Html.DisplayFor(model => model.Student.EnrollmentDate)
         </dd>
     </dl>
     
     <form method="post">
-        <input type="hidden" asp-for="Enrollment.EnrollmentID" />
+        <input type="hidden" asp-for="Student.StudentId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-page="./Index">Back to List</a>
     </form>
